<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/register">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:text="@string/hello_new_user"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email_editText"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="19dp"
        android:onClick="addListenerOnSubmit"
        android:text="@string/submit_button"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="22dp"
        android:background="#000000"
        android:ems="10"
        android:hint="@string/name_input"
        android:inputType="textPersonName"
        android:text="@string/email_input"
        android:textColor="#ffffff" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/number_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/name_editText"
        android:layout_marginTop="28dp"
        android:background="#000000"
        android:ems="10"
        android:hint="@string/age_input"
        android:inputType="number"
        android:shadowColor="#ffffcc"
        android:text="@string/age_input"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="14dp"
        android:background="#000000"
        android:ems="10"
        android:hint="@string/email_input"
        android:inputType="textEmailAddress"
        android:text="@string/email_input"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/submit_button"
        android:layout_alignBottom="@+id/submit_button"
        android:layout_alignParentRight="true"
        android:layout_marginRight="58dp"
        android:onClick="addListenerOnCancel"
        android:text="@string/cancel_button"
        android:textColor="#000000" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/number_editText"
        android:layout_below="@+id/number_editText"
        android:layout_marginTop="27dp" >

        <RadioButton
            android:id="@+id/male_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:text="@string/gender_male"
            android:textColor="#ffffff" />

        <RadioButton
            android:id="@+id/female_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:checked="true"
            android:text="@string/gender_female"
            android:textColor="#ffffff" />

    </RadioGroup>

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name_editText"
        android:layout_below="@+id/email_editText"
        android:layout_marginTop="29dp"
        android:background="#000000"
        android:ems="10"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:text="@string/password_input"
        android:textColor="#ffffff" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit_button"
        android:layout_alignLeft="@+id/submit_button" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ratingBar1"
        android:layout_alignLeft="@+id/password_editText"
        android:text="@string/rate"
        android:textColor="#ffffff" />

</RelativeLayout>
